force-app/main/default/objects/Opportunity/fields/AbandonedByCustomer_Count__c.field-meta.xml
<CustomField>
    <fullName>AbandonedByCustomer_Count__c</fullName>
    <formula>If(ISPICKVAL( StageName , &quot;Abandoned By Customer&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># AbandonedByCustomer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>