force-app/main/default/objects/Opportunity/fields/Account_Owners_BU__c.field-meta.xml
<CustomField>
    <fullName>Account_Owners_BU__c</fullName>
    <formula>TEXT( Account.Owner.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owners BU</label>
    <type>Text</type>
</CustomField>