force-app/main/default/objects/Opportunity/fields/AccountOwnedBy_User__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnedBy_User__c</fullName>
    <formula>IF(   Account.OwnerId  = $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountOwnedBy$User</label>
    <type>Checkbox</type>
</CustomField>