force-app/main/default/objects/Opportunity/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>2025 la til 5 - Awarded til formula</description>
    <formula>IF(OR( IsClosed, ISPICKVAL(StageName, &apos;5 - Awarded&apos;)), CloseDate- DateValue(CreatedDate), NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>