force-app/main/default/objects/Opportunity/fields/Amount_AbandonedByCustomer__c.field-meta.xml
<CustomField>
    <fullName>Amount_AbandonedByCustomer__c</fullName>
    <description>If the stage is Abandoned by Customer, the amount is set to null</description>
    <formula>IF (IsPickval(StageName, &quot;Abandoned by Customer&quot;), Amount, null)</formula>
    <label>Amount AbandonedByCustomer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>