force-app/main/default/objects/Opportunity/fields/Amount_AbandonedByUs__c.field-meta.xml
<CustomField>
    <fullName>Amount_AbandonedByUs__c</fullName>
    <formula>IF (IsPickval(StageName, &quot;Abandoned by Us&quot;), Amount, null)</formula>
    <label>Amount AbandonedByUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>