force-app/main/default/objects/Opportunity/fields/Amount_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Calculated__c</fullName>
    <formula>Consultants__c * Months__c *20*7.5*1400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>