force-app/main/default/objects/Opportunity/fields/Amount_Expected_Next_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Amount_Expected_Next_Fiscal_Year__c</fullName>
    <formula>Amount_Next_Year__c * Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount next year formula times probability</inlineHelpText>
    <label>Amount Expected Next Fiscal Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>