force-app/main/default/objects/Opportunity/fields/Amount_Expected_This_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Amount_Expected_This_Fiscal_Year__c</fullName>
    <formula>Amount_This_Year_Calculated__c  * Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Expected This Fiscal Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>