force-app/main/default/objects/Opportunity/fields/Amount_Lost__c.field-meta.xml
<CustomField>
    <fullName>Amount_Lost__c</fullName>
    <formula>IF (IsPickval(StageName, &quot;Closed Lost&quot;), Amount, null)</formula>
    <label>Amount Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>