force-app/main/default/objects/Opportunity/fields/Amount_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Amount_Old_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used for calculating the Amount using months and consultants in a separate formula. Jessie does not know how it works or how it is used, but it works so leaving it for now. January 2025</description>
    <label>Amount Old Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>