force-app/main/default/objects/Opportunity/fields/Amount_Open__c.field-meta.xml
<CustomField>
    <fullName>Amount_Open__c</fullName>
    <formula>IF (IsClosed=false, Amount, null)</formula>
    <label>Amount Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>