force-app/main/default/objects/Opportunity/fields/Amount_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Amount_This_Year__c</fullName>
    <description>6.1.25 Updated in Opportunity Changes flow</description>
    <label>Amount This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>