force-app/main/default/objects/Opportunity/fields/Amount_This_Year_Calculated_From_Calc_a__c.field-meta.xml
<CustomField>
    <fullName>Amount_This_Year_Calculated_From_Calc_a__c</fullName>
    <formula>IF(MONTH( Expected_Start_Sate__c) + Months__c &gt;12 ,((13-MONTH( Expected_Start_Sate__c ))/ Months__c )* Amount_Calculated__c , Amount_Calculated__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount This Year Calculated From Calc a.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>