force-app/main/default/objects/Opportunity/fields/Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Amount_Won__c</fullName>
    <formula>IF((ISPICKVAL( StageName , &quot;Closed Won&quot;) ||ISPICKVAL( StageName , &quot;5 - Awarded&quot;)), Amount, null)</formula>
    <label>Amount Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>