force-app/main/default/objects/Opportunity/fields/Approved_Terms__c.field-meta.xml
<CustomField>
    <fullName>Approved_Terms__c</fullName>
    <inlineHelpText>Fill in the approved weak terms as stated in the DOA, column 3 (Avvik)</inlineHelpText>
    <label>Approved Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>