force-app/main/default/objects/Opportunity/fields/Apps_Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Apps_Amount_Won__c</fullName>
    <description>Removed access 13.05.25 To be deleted</description>
    <formula>IF( AND(Includes(Business_Unit__c, &quot;APPS&quot;), !Includes(Business_Unit__c, &quot;BC&quot;) ,!INCLUDES(Business_Unit__c, &quot;DPS&quot;) ), Amount_Won__c, 
Amount_Won__c * APPS_Share_Pct__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xxxApps Amount Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>