force-app/main/default/objects/Opportunity/fields/Apps_Comments__c.field-meta.xml
<CustomField>
    <fullName>Apps_Comments__c</fullName>
    <inlineHelpText>Additional comments that are only relevant for APPS</inlineHelpText>
    <label>APPS Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>