force-app/main/default/objects/Opportunity/fields/Apps_Communities_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Apps_Communities_Secondary__c</fullName>
    <inlineHelpText>Choose additional communities relevant for the opportunity, if any</inlineHelpText>
    <label>Apps Communities (Secondary)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Code</fullName>
            </value>
            <value>
                <fullName>Dynamics</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Experience Tech</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Navigate</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>Technology Mngt</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
                <isActive>false</isActive>
                <label>Creative</label>
            </value>
            <value>
                <fullName>DevOps</fullName>
                <isActive>false</isActive>
                <label>DevOps</label>
            </value>
            <value>
                <fullName>MS Business Applications</fullName>
                <isActive>false</isActive>
                <label>MS Business Applications</label>
            </value>
            <value>
                <fullName>Quality</fullName>
                <isActive>false</isActive>
                <label>Quality</label>
            </value>
            <value>
                <fullName>Service Now &amp; RPA</fullName>
                <isActive>false</isActive>
                <label>Service Now &amp; RPA</label>
            </value>
            <value>
                <fullName>Transformation Advisory</fullName>
                <isActive>false</isActive>
                <label>Transformation Advisory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>