force-app/main/default/objects/Opportunity/fields/Apps_Opportunity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Apps_Opportunity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Manager that has the responsibility of driving the opportunity forward. Making sure there is status meetings, driving the team to make decisions og making sure there is progress on deliverables.</inlineHelpText>
    <label>Apps Opportunity Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>