force-app/main/default/objects/Opportunity/fields/Apps_Opportunity_Team__c.field-meta.xml
<CustomField>
    <fullName>Apps_Opportunity_Team__c</fullName>
    <inlineHelpText>Additional areas of responsibility within the opportunity (e.g fields of expertise and / or teamleaders)</inlineHelpText>
    <label>Apps Opportunity Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>