force-app/main/default/objects/Opportunity/fields/Apps_Owner__c.field-meta.xml
<CustomField>
    <fullName>Apps_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bid owner in Apps. Is automatically populated with the Apps owner who is registered on the Account in Salesforce, but this can be manually overridden.</description>
    <inlineHelpText>Manager that has the overall responsibility for the opportunity, should be a  a member from LG Core or Delivery. Responsible for driving the tender forward, onboarding the right team, delivering on time with high quality. Also responsible for reporting and escalating progress and risk.</inlineHelpText>
    <label>Apps Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>