force-app/main/default/objects/Opportunity/fields/Apps_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Apps_Owner_Name__c</fullName>
    <formula>Apps_Owner__r.FirstName + &apos; &apos; +  Apps_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apps Owner Name</label>
    <type>Text</type>
</CustomField>