force-app/main/default/objects/Opportunity/fields/Apps_Proactive_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Apps_Proactive_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick off box if this opportunity does not come from any of the official portals e.g. Doffin, Mercell, call-off on framework agreement. By ticking this box you are notifying APPS sales to address the opportunity and give support</inlineHelpText>
    <label>Apps Proactive Opportunity</label>
    <type>Checkbox</type>
</CustomField>