force-app/main/default/objects/Opportunity/fields/Apps_Region__c.field-meta.xml
<CustomField>
    <fullName>Apps_Region__c</fullName>
    <label>Apps Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bergen</fullName>
            </value>
            <value>
                <fullName>Drammen</fullName>
            </value>
            <value>
                <fullName>Fredrikstad</fullName>
            </value>
            <value>
                <fullName>Hamar</fullName>
            </value>
            <value>
                <fullName>Kristiansand</fullName>
            </value>
            <value>
                <fullName>København</fullName>
            </value>
            <value>
                <fullName>Nearshore</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Oslo</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Stavanger</fullName>
            </value>
            <value>
                <fullName>Tromsø</fullName>
            </value>
            <value>
                <fullName>Trondheim</fullName>
            </value>
            <value>
                <fullName>Katowice</fullName>
                <isActive>false</isActive>
                <label>Katowice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>