force-app/main/default/objects/Opportunity/fields/Apps_Sales_Progress__c.field-meta.xml
<CustomField>
    <fullName>Apps_Sales_Progress__c</fullName>
    <formula>IF( Apps_Proactive_Opportunity__c = FALSE, &apos;&apos;,

IF( OR( 
TEXT(StageName)=&apos;0 - Planning&apos;, 
AND(Meeting_Booked__c = FALSE , TEXT(StageName)=&apos;1 - Possibility&apos;)), 
&apos;Planlagt (ikke kontaktet)&apos;,

IF( AND(Meeting_Booked__c = TRUE , TEXT(StageName)=&apos;1 - Possibility&apos;), &apos;Pågår (møter/tilbud)&apos;,

IF(AND( 
OR(TEXT(StageName)=&apos;2 - RFI&apos;, TEXT(StageName)=&apos;3 - Prequal&apos;, TEXT(StageName)=&apos;4 - Offer&apos;), TEXT(Status__c)=&apos;In Progress&apos;), 
&apos;Pågår (møter/tilbud)&apos;,

IF(AND(
OR(TEXT(StageName)=&apos;2 - RFI&apos;, TEXT(StageName)=&apos;3 - Prequal&apos;, TEXT(StageName)=&apos;4 - Offer&apos;),
TEXT(Status__c)=&apos;Sent&apos;), 
&apos;Venter på tilbakemelding&apos;,

IF(OR(TEXT(StageName)=&apos;5 - Awarded&apos;, TEXT(StageName)=&apos;Closed Won&apos;), 
&apos;Vunnet&apos;,

IF(OR(TEXT(StageName)=&apos;Closed Lost&apos;, TEXT(StageName)=&apos;Abandoned by Us&apos;,TEXT(StageName)=&apos;Abandoned by Customer&apos;), 
&apos;Avsluttet&apos;,
&apos;&apos;
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No input required</inlineHelpText>
    <label>Apps Sales Progress</label>
    <type>Text</type>
</CustomField>