force-app/main/default/objects/Opportunity/fields/APPS_Share_Pct__c.field-meta.xml
<CustomField>
    <fullName>APPS_Share_Pct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>APPS Share %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>