force-app/main/default/objects/Opportunity/fields/Apps_status2__c.field-meta.xml
<CustomField>
    <fullName>Apps_status2__c</fullName>
    <description>Removed access 13.05.25 To be deleted</description>
    <formula>IF( ISPICKVAL(StageName, &apos;1 - Planning&apos;), &apos;Planlegging&apos;, 
IF( AND(Meeting_Booked__c = TRUE , OR(TEXT(StageName)=&apos;2 - RFI&apos;, TEXT(StageName)=&apos;3 - Prequal&apos;, AND(TEXT(StageName)=&apos;4 - Order&apos;,TEXT(Status__c)=&apos;In Progress&apos;))), &apos;Pågår, møte planlagt&apos;,
IF( AND(TEXT(StageName)=&apos;4 - Order&apos;,TEXT(Status__c)=&apos;Sent&apos;), &apos;Venter på tilbakemelding&apos;,
IF(OR(TEXT(StageName)=&apos;Awarded&apos;, TEXT(StageName)=&apos;Closed Won&apos;,TEXT(StageName)=&apos;Closed Lost&apos;, TEXT(StageName)=&apos;Abandoned by Us&apos;,TEXT(StageName)=&apos;Abandoned by Customer&apos;), 
&apos;Avsluttet&apos;,
&apos;&apos;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xxxApps status2</label>
    <type>Text</type>
</CustomField>