force-app/main/default/objects/Opportunity/fields/Apps_Status__c.field-meta.xml
<CustomField>
    <fullName>Apps_Status__c</fullName>
    <description>Status for Apps’ bid work</description>
    <inlineHelpText>The relevant APPS status for the progression for the opportunity</inlineHelpText>
    <label>Apps Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(Not set)</fullName>
                <default>true</default>
                <label>(Not set)</label>
            </value>
            <value>
                <fullName>0 Waiting</fullName>
            </value>
            <value>
                <fullName>1 Decision</fullName>
            </value>
            <value>
                <fullName>2 In Progress</fullName>
            </value>
            <value>
                <fullName>3 Delivered / Negotiation</fullName>
            </value>
            <value>
                <fullName>4 Delivered / Completed</fullName>
            </value>
            <value>
                <fullName>5 Abandoned by us - Capacity</fullName>
            </value>
            <value>
                <fullName>6 Abandoned by us - Out of Scope</fullName>
            </value>
            <value>
                <fullName>7 Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>