force-app/main/default/objects/Opportunity/fields/Apps_Win_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Apps_Win_Loss_Reason__c</fullName>
    <inlineHelpText>Outcome whether we loose or win the deal, choose from the dropdown list</inlineHelpText>
    <label>Apps Win / Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Insufficient resources / team</fullName>
            </value>
            <value>
                <fullName>Insufficient understanding of assignment</fullName>
            </value>
            <value>
                <fullName>Insufficient competence</fullName>
            </value>
            <value>
                <fullName>Insufficient references</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>