force-app/main/default/objects/Opportunity/fields/Assignment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_End_Date__c</fullName>
    <label>Assignment End Date</label>
    <type>Date</type>
</CustomField>