force-app/main/default/objects/Opportunity/fields/BC_Comments__c.field-meta.xml
<CustomField>
    <fullName>BC_Comments__c</fullName>
    <inlineHelpText>Information that may be relevant for win probability, staffing or other opportunity considerations</inlineHelpText>
    <label>Advisory Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>