force-app/main/default/objects/Opportunity/fields/BC_Go2Market_Offering__c.field-meta.xml
<CustomField>
    <fullName>BC_Go2Market_Offering__c</fullName>
    <label>Advisory Go2Market Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Datavisualisering</fullName>
            </value>
            <value>
                <fullName>Design sprint</fullName>
            </value>
            <value>
                <fullName>Digital modenhetsanalyse</fullName>
            </value>
            <value>
                <fullName>Discover sustainable value</fullName>
            </value>
            <value>
                <fullName>Due diligence personvern</fullName>
            </value>
            <value>
                <fullName>Etterlevelse av åpenhetsloven</fullName>
            </value>
            <value>
                <fullName>KI-oppdrag</fullName>
            </value>
            <value>
                <fullName>Leverandørvurdering personvern</fullName>
            </value>
            <value>
                <fullName>Modenhetsanalyse innovasjon</fullName>
            </value>
            <value>
                <fullName>Modenhetsvurdering Bærekraft</fullName>
            </value>
            <value>
                <fullName>Somulator</fullName>
            </value>
            <value>
                <fullName>Toppleders Digitale Agenda 2022</fullName>
            </value>
            <value>
                <fullName>Vesentlighetsanalyse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>