force-app/main/default/objects/Opportunity/fields/BC_Lost_or_Won_by_Others__c.field-meta.xml
<CustomField>
    <fullName>BC_Lost_or_Won_by_Others__c</fullName>
    <formula>If(OR( Lost_Count__c = 1,   TEXT(BC_Status__c) = &apos;Won by other BU&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisory Lost or Won by Others</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>