force-app/main/default/objects/Opportunity/fields/BC_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>BC_Meeting_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check in this box as soon as you have arranged a meeting with the customer</inlineHelpText>
    <label>Advisory Meeting Booked</label>
    <type>Checkbox</type>
</CustomField>