force-app/main/default/objects/Opportunity/fields/BC_Owner__c.field-meta.xml
<CustomField>
    <fullName>BC_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bid owner in BC. Is automatically populated with the Apps owner who is registered on the Account in Salesforce, but this can be manually overridden.</description>
    <inlineHelpText>Opportunity’s owner, will normally be the client owner in Advisory or other roles in Advisory with sales and bid responsibility. Responsible for driving the opportunity forward, customer meetings, creating value proposition, getting bid staff in place, ensuring that the offer is competitive with high quality, acceptable risk and good commercial terms. Responsible to share updates in Salesforce. Escalates to suitable forums, e.g. status meeting, bid meeting or sales meeting, and taking measures.</inlineHelpText>
    <label>Advisory Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BC_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>