force-app/main/default/objects/Opportunity/fields/BC_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BC_Owner_Name__c</fullName>
    <formula>BC_Owner__r.FirstName + &apos; &apos; +  BC_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisory Owner Name</label>
    <type>Text</type>
</CustomField>