force-app/main/default/objects/Opportunity/fields/BC_Priority__c.field-meta.xml
<CustomField>
    <fullName>BC_Priority__c</fullName>
    <inlineHelpText>The priority of the opportunity, based on a set of prioritization criteria: 1) Priority account, 2) strategic value, desired service or focus area, 3) contract value and 4) win probability</inlineHelpText>
    <label>Advisory Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(Not set)</fullName>
                <default>true</default>
                <label>(Not set)</label>
            </value>
            <value>
                <fullName>1 Strategic Deal</fullName>
            </value>
            <value>
                <fullName>2 High</fullName>
            </value>
            <value>
                <fullName>3 Medium</fullName>
            </value>
            <value>
                <fullName>4 Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>