force-app/main/default/objects/Opportunity/fields/BC_Proactive_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BC_Proactive_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the opportunity is generated by proactive work, this must be ticked off</inlineHelpText>
    <label>Advisory Proactive Opportunity</label>
    <type>Checkbox</type>
</CustomField>