force-app/main/default/objects/Opportunity/fields/BC_Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>BC_Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used when the opportunity is of strategic value, large or complex, responsible for assisting the BC owner in the process</inlineHelpText>
    <label>Advisory Secondary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>