force-app/main/default/objects/Opportunity/fields/BC_Share_Pct__c.field-meta.xml
<CustomField>
    <fullName>BC_Share_Pct__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Removed access 13.05.25 To be deleted</description>
    <label>xxxBC Share %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>