force-app/main/default/objects/Opportunity/fields/BC_Status__c.field-meta.xml
<CustomField>
    <fullName>BC_Status__c</fullName>
    <inlineHelpText>The relevant BC status of progression for the opportunity</inlineHelpText>
    <label>Advisory Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(Not set)</fullName>
                <default>true</default>
                <label>(Not set)</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Abandoned by Us - Capacity</fullName>
            </value>
            <value>
                <fullName>Abandoned by Us - Out of Scope</fullName>
            </value>
            <value>
                <fullName>Abandoned by Us - Win Probability</fullName>
            </value>
            <value>
                <fullName>Won by other BU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>