force-app/main/default/objects/Opportunity/fields/BCR0_and_BCR1__c.field-meta.xml
<CustomField>
    <fullName>BCR0_and_BCR1__c</fullName>
    <formula>If((BCR0_Count__c &gt; 0 &amp;&amp; BCR1_Count__c &gt; 0), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCR0 and BCR1</label>
    <type>Checkbox</type>
</CustomField>