force-app/main/default/objects/Opportunity/fields/BCR0_Count__c.field-meta.xml
<CustomField>
    <fullName>BCR0_Count__c</fullName>
    <label>#BCR0</label>
    <summaryFilterItems>
        <field>BCR__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>012580000002SkMAAU, 0124I000000dEByQAM</value>
    </summaryFilterItems>
    <summaryForeignKey>BCR__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>