force-app/main/default/objects/Opportunity/fields/BCR0_Status__c.field-meta.xml
<CustomField>
    <fullName>BCR0_Status__c</fullName>
    <description>For validation of move to stage 2a or higher</description>
    <label>BCR0 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not created</fullName>
                <default>true</default>
                <label>Not created</label>
            </value>
            <value>
                <fullName>Not approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>