force-app/main/default/objects/Opportunity/fields/BCR1__c.field-meta.xml
<CustomField>
    <fullName>BCR1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCR1</label>
    <type>Checkbox</type>
</CustomField>