force-app/main/default/objects/Opportunity/fields/BCR1_Count__c.field-meta.xml
<CustomField>
    <fullName>BCR1_Count__c</fullName>
    <label>#BCR1</label>
    <summaryFilterItems>
        <field>BCR__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>012580000002SkNAAU</value>
    </summaryFilterItems>
    <summaryForeignKey>BCR__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>