force-app/main/default/objects/Opportunity/fields/BCR__c.field-meta.xml
<CustomField>
    <fullName>BCR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BCR0  is approved</description>
    <label>BCR0</label>
    <type>Checkbox</type>
</CustomField>